--- a/stylesheets/components/_artifact--monster.scss
+++ b/stylesheets/components/_artifact--monster.scss
@@ -180,15 +180,24 @@
 
 				.random {
 					letter-spacing: 0;
+					height: 100%;
+
+					.block__value,
+					.button--random-damage {
+						width: 100%;
+						height: 100%;
+						flex: 1 1 auto;
+						align-self: stretch;
+						justify-content: center;
+					}
 
 					.roll {
 						white-space: normal;
-						line-height: 0.875;
-						font-style: 1rem;
-						text-align: left;
+						line-height: 1;
+						font-size: 1rem;
+						text-align: center;
 						letter-spacing: 0;
-						margin-top: -5px;
-						margin-bottom: -5px;
+						margin: 0;
 					}
 				}
 			}
